update-文字を小さく

--- a/app/views/home/guide_items/_create_character.html.erb
+++ b/app/views/home/guide_items/_create_character.html.erb
@@ -1,5 +1,5 @@
 <%= render 'home/guide_items/guide_item_template',
   title: "キャラクターを作成しよう！",
-  content_text: raw('<p class="m-0">○ 「キャラクター」ではそのストーリーの登場人物となる要素を管理できます。追加ボタンを押すことで作成することが可能です。<br><br>○ 右図のように作成済みの要素はクリックすることで詳細確認できます。<br><br>★ 関連するキャラクター、特徴は複数設定することができます。<br>複数設定することで詳細な人物像を作り上げましょう。<br><br>※ 画像をクリックして拡大</p>'),
+  content_text: raw('<p class="m-0 text-sm md:text-base">○ 「キャラクター」ではそのストーリーの登場人物となる要素を管理できます。追加ボタンを押すことで作成することが可能です。<br><br>○ 画像のように作成済みの要素はクリックすることで詳細確認できます。<br><br>★ 関連するキャラクター、特徴は複数設定することができます。<br>複数設定することで詳細な人物像を作り上げましょう。<br>※ それぞれ詳細設定も可能です。<br><br>※ 画像をクリックして拡大</p>'),
   image_path_param: 'guide-character.png'
 %>
