--- a/app/views/home/guide_items/_create_plot.html.erb
+++ b/app/views/home/guide_items/_create_plot.html.erb
@@ -1,5 +1,5 @@
 <%= render 'home/guide_items/guide_item_template',
   title: "プロットを作成しよう！",
-  content_text: raw('<p class="m-0">○ ストーリー詳細ページにある「プロット」ではそのストーリーの構成を章単位で管理できます。追加ボタンを押すことで作成することが可能です。<br><br>○ 右図のように作成済みの各要素を使用し、わかりやすくプロット管理が可能です。※事前に各要素の作成をお願いします。<br><br>○ 「構成メモ」では追加した各要素などを参考に、自由にメモ書きなどに使用してください。<br><br>○ 作成したプロットを確認しながら、<br>ご自身の物語を書いていきましょう！<br><br>※ 画像をクリックして拡大</p>'),
+  content_text: raw('<p class="m-0 text-sm md:text-base">○ ストーリー詳細ページにある「プロット」ではそのストーリーの構成を章単位で管理できます。追加ボタンを押すことで作成することが可能です。<br><br>○ 画像のように作成済みの各要素を使用し、わかりやすくプロット管理が可能です。※事前に各要素の作成をお願いします。<br><br>○ 「構成メモ」では追加した各要素などを参考に、自由にメモ書きなどに使用してください。<br><br>○ 作成したプロットを確認しながら、<br>ご自身の物語を書いていきましょう！<br><br>※ 画像をクリックして拡大</p>'),
   image_path_param: 'guide-plot.png'
 %>
