--- a/app/views/home/guide_items/_create_world_guide.html.erb
+++ b/app/views/home/guide_items/_create_world_guide.html.erb
@@ -1,5 +1,5 @@
 <%= render 'home/guide_items/guide_item_template',
   title: "ワールドガイドを作成しよう！",
-  content_text: raw('<p class="m-0">○ 「ワールドガイド」ではそのストーリーの世界観となる要素を管理できます。追加ボタンを押すことで作成することが可能です。<br><br>○ 右図のように作成済みの要素は<br>クリックすることで詳細確認できます。<br><br>★ 特徴は複数設定することができます。複数設定することで詳細な世界観を作り上げましょう。<br><br>※ 画像をクリックして拡大</p>'),
+  content_text: raw('<p class="m-0 text-sm md:text-base">○ 「ワールドガイド」ではそのストーリーの世界観となる要素を管理できます。追加ボタンを押すことで作成することが可能です。<br><br>○ 画像のように作成済みの要素は<br>クリックすることで詳細確認できます。<br><br>★ 特徴は複数設定することができます。複数設定することで詳細な世界観を作り上げましょう。<br>※ 特徴は詳細設定も可能です。<br><br>※ 画像をクリックして拡大</p>'),
   image_path_param: 'guide-world-guide.png'
 %>
