--- a/app/views/home/guide_items/_google_login.html.erb
+++ b/app/views/home/guide_items/_google_login.html.erb
@@ -1,5 +1,10 @@
 <%= render 'home/guide_items/guide_item_template',
   title: "Googleログインしよう！",
-  content_text: raw('<p class="m-0">まずは、Googleログインを行いましょう。<br>ログイン後は右図のように、<br>ストーリー一覧ページへ移ります。<br><br>※ 画像をクリックして拡大</p>'),
+  content_text: raw(
+    '<p class="m-0 text-sm md:text-base">' +
+    'まずは、' +
+    link_to("Googleログイン", "/auth/google_oauth2", data: { turbo: "false" }, class: "text-blue-600 hover:underline font-semibold") +
+    'を行いましょう。 ログイン後は画像のように、<br>ストーリー一覧ページへ移ります。<br><br>※ 画像をクリックして拡大</p>'
+  ),
   image_path_param: 'guide-login.png'
 %>
