--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <div class="main-content flex flex-col items-center max-w-4xl mx-auto font-bold px-5 py-2 min-h-[calc(100vh-150px)]">
   
-  <div class="service-description text-center mb-12 max-w-2xl w-full">
+  <div class="service-description text-center mb-8 max-w-2xl w-full">
     <%= image_tag asset_path("home.png"), class: "w-full h-auto " %>
   </div>
 
@@ -18,7 +18,7 @@
       Googleでログイン
     <% end %>
   </div>
-  <p class="note text-sm text-black leading-relaxed mt-0 ">
+  <p class="note text-xs sm:text-sm text-black leading-relaxed mt-0 ">
     ※注意 : 「お試し作成」では作成したストーリーの保存は行われません。<br>
     作成したストーリーを保存したいときは新規登録をお願いします。
   </p>
