--- a/app/views/plots/_form.html.erb
+++ b/app/views/plots/_form.html.erb
@@ -12,8 +12,8 @@
   <% end %>
 
   <div>
-    <%= f.label :chapter, "章", class: "block text-lg font-bold" %>
-    <%= f.text_field :chapter, class: "mt-1 block w-full px-3 py-2 border border-black rounded-md shadow-sm", placeholder: "第一章、プロローグなど10文字以内で記入してください。" %>
+    <%= f.label :chapter, "章・話", class: "block text-lg font-bold" %>
+    <%= f.text_field :chapter, class: "mt-1 block w-full px-3 py-2 border border-black rounded-md shadow-sm", placeholder: "第一章、プロローグ、第一話など10文字以内で記入してください。" %>
   </div>
 
   <div>
