add-プライバシーポリシーページ

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -6,7 +6,7 @@
     <span class="hidden sm:inline">|</span>
 
     <nav class="flex gap-x-4">
-      <%= link_to "プライバシーポリシー ※準備中", "#", class: "underline hover:no-underline" %>
+      <%= link_to "プライバシーポリシー", static_pages_privacy_path, class: "underline hover:no-underline" %>
       <%= link_to "利用規約 ※準備中", "#", class: "underline hover:no-underline" %>
       <%= link_to "お問い合わせ ※準備中", "#", class: "underline hover:no-underline" %>
     </nav>
