--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,9 @@
   <body class="flex flex-col min-h-screen" 
       data-controller="modal image-viewer" 
       data-action="show-warning@window->modal#showWarning">
-    <% if logged_in? %>
+    <% if controller_name == 'static_pages' %>
+      <%= render 'layouts/header_static' %>
+    <% elsif logged_in? %>
       <% if controller_name == 'stories' && action_name == 'index' %>
         <%= render 'layouts/header_after_story' %>
       <% else %>
