--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -7,7 +7,7 @@
 
     <nav class="flex gap-x-4">
       <%= link_to "プライバシーポリシー", static_pages_privacy_path, class: "underline hover:no-underline" %>
-      <%= link_to "利用規約 ※準備中", "#", class: "underline hover:no-underline" %>
+      <%= link_to "利用規約", static_pages_terms_path, class: "underline hover:no-underline" %>
       <%= link_to "お問い合わせ ※準備中", "#", class: "underline hover:no-underline" %>
     </nav>
 
