--- a/app/views/layouts/_header_after_login.html.erb
+++ b/app/views/layouts/_header_after_login.html.erb
@@ -1,4 +1,4 @@
-<header class="relative flex justify-between items-center px-4 md:px-8 py-4 border-b border-black bg-white shadow-sm" data-controller="mobile-menu">
+<header class="relative flex justify-between items-center px-4 md:px-8 py-4 border-b border-black bg-white shadow-sm sticky top-0 z-50" data-controller="mobile-menu">
 
   <div class="flex-shrink-0">
     <%= link_to root_path, class: "" do %>
