--- a/app/views/layouts/_header_after_login.html.erb
+++ b/app/views/layouts/_header_after_login.html.erb
@@ -8,7 +8,7 @@
 
   <nav class="hidden md:flex items-center space-x-4">
     <%= button_to "ログアウト", logout_path, method: :delete, class: "border border-gray-400 px-4 py-2 rounded-md font-semibold hover:bg-gray-100" %>
-    <%= link_to "使い方ガイド ※準備中", "#", class: "border border-gray-400 px-4 py-2 rounded-md font-semibold hover:bg-gray-100" %>
+    <%= link_to "使い方ガイド", "#", class: "border border-gray-400 px-4 py-2 rounded-md font-semibold hover:bg-gray-100", data: { action: "click->guide-modal#open" } %>
     <%= link_to "ホームに戻る", stories_path, class: "border border-gray-400 px-4 py-2 rounded-md font-semibold hover:bg-gray-100" %>
   </nav>
 
@@ -21,7 +21,7 @@
   <div data-mobile-menu-target="menu" class="hidden md:hidden absolute top-full right-0 mt-2 w-48 bg-white border rounded-lg shadow-xl z-20">
     <div class="flex flex-col p-2 space-y-2">
       <%= link_to "ホームに戻る", stories_path, class: "px-4 py-2 text-left hover:bg-gray-100 rounded-md" %>
-      <%= link_to "使い方ガイド ※準備中", "#", class: "px-4 py-2 text-left hover:bg-gray-100 rounded-md" %>
+      <%= link_to "使い方ガイド", "#", class: "px-4 py-2 text-left hover:bg-gray-100 rounded-md", data: { action: "click->guide-modal#open" } %>
       <%= button_to "ログアウト", logout_path, method: :delete, class: "w-full text-left px-4 py-2 hover:bg-gray-100 rounded-md" %>
     </div>
   </div>
