--- a/app/views/layouts/_header_after_story.html.erb
+++ b/app/views/layouts/_header_after_story.html.erb
@@ -11,7 +11,7 @@
       <%= link_to "管理者ページ", admin_root_path, class: "bg-black text-white px-4 py-2 rounded-md font-semibold hover:bg-gray-700" %>
     <% end %>
     <%= button_to "ログアウト", logout_path, method: :delete, class: "border border-gray-400 px-4 py-2 rounded-md font-semibold hover:bg-gray-100" %>
-    <%= link_to "使い方ガイド ※準備中", "#", class: "border border-gray-400 px-4 py-2 rounded-md font-semibold hover:bg-gray-100" %>
+    <%= link_to "使い方ガイド", "#", class: "border border-gray-400 px-4 py-2 rounded-md font-semibold hover:bg-gray-100", data: { action: "click->guide-modal#open" } %>
     <%= link_to "ストーリー作成", new_story_path, class: "bg-black text-white px-4 py-2 rounded-md font-semibold hover:bg-gray-700" %>
   </nav>
 
@@ -27,7 +27,7 @@
       <% if current_user.admin? %>
         <%= link_to "管理者ページ", admin_root_path, class: "bg-black text-white px-4 py-2 text-left hover:bg-gray-700 rounded-md" %>
       <% end %>
-      <%= link_to "使い方ガイド ※準備中", "#", class: "px-4 py-2 text-left hover:bg-gray-100 rounded-md" %>
+      <%= link_to "使い方ガイド", "#", class: "px-4 py-2 text-left hover:bg-gray-100 rounded-md", data: { action: "click->guide-modal#open" } %>
       <%= button_to "ログアウト", logout_path, method: :delete, class: "w-full text-left px-4 py-2 hover:bg-gray-100 rounded-md" %>
     </div>
   </div>
