--- a/app/views/home/guide_items/_google_login.html.erb
+++ b/app/views/home/guide_items/_google_login.html.erb
@@ -3,7 +3,9 @@
   content_text: raw(
     '<p class="m-0 text-sm md:text-base">' +
     'まずは、' +
-    link_to("Googleログイン", "/auth/google_oauth2", data: { turbo: "false" }, class: "text-blue-600 hover:underline font-semibold") +
+
+    button_to("Googleログイン", "/auth/google_oauth2", method: :post, form_class: "inline", class: "bg-transparent border-none p-0 text-blue-600 hover:underline font-semibold", form: { data: { turbo: false } }) +
+
     'を行いましょう。 ログイン後は画像のように、<br>ストーリー一覧ページへ移ります。<br><br>※ 画像をクリックして拡大</p>'
   ),
   image_path_param: 'guide-login.png'
