--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,20 @@
     <%= favicon_link_tag 'favicon.png' %>
     <%= favicon_link_tag 'apple-touch-icon.png', rel: 'apple-touch-icon', type: 'image/png', sizes: '180x180' %>
   
+    <meta name="description" content="Historia（ヒストリア）は小説の設定管理の側面から、物語の一貫性を保ち、情報の煩雑化を防ぐことで、創作活動の継続を支援するWebアプリです。" />
+
+    <meta property="og:url" content="https://historia-novel.com" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Historia | 作家のための設定管理ツール" />
+    <meta property="og:description" content="Historia（ヒストリア）は小説の設定管理の側面から、物語の一貫性を保ち、情報の煩雑化を防ぐことで、創作活動の継続を支援するWebアプリです。" />
+    <meta property="og:site_name" content="Historia" />
+    <meta property="og:image" content="<%= image_url('ogp_image.png') %>" /> <%# OGP画像のパス %>
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Historia | 作家のための設定管理ツール" />
+    <meta name="twitter:description" content="Historia（ヒストリア）は小説の設定管理の側面から、物語の一貫性を保ち、情報の煩雑化を防ぐことで、創作活動の継続を支援するWebアプリです。" />
+    <meta name="twitter:image" content="<%= image_url('ogp_image.png') %>" /> <%# OGP画像のパス %>
+
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-Q7B5Z6DT72"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
