--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,12 +17,12 @@
     <meta property="og:title" content="Historia | 作家のための設定管理ツール" />
     <meta property="og:description" content="Historia（ヒストリア）は小説の設定管理の側面から、物語の一貫性を保ち、情報の煩雑化を防ぐことで、創作活動の継続を支援するWebアプリです。" />
     <meta property="og:site_name" content="Historia" />
-    <meta property="og:image" content="<%= image_url('ogp_image.png') %>" /> <%# OGP画像のパス %>
+    <meta property="og:image" content="<%= request.protocol + request.host_with_port + image_path('ogp_image.png') %>" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Historia | 作家のための設定管理ツール" />
     <meta name="twitter:description" content="Historia（ヒストリア）は小説の設定管理の側面から、物語の一貫性を保ち、情報の煩雑化を防ぐことで、創作活動の継続を支援するWebアプリです。" />
-    <meta name="twitter:image" content="<%= image_url('ogp_image.png') %>" /> <%# OGP画像のパス %>
+    <meta name="twitter:image" content="<%= request.protocol + request.host_with_port + image_path('ogp_image.png') %>" />
 
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-Q7B5Z6DT72"></script>
     <script>
